--- a/Eng-Software/plano_de_documentacao.tex
+++ b/Eng-Software/plano_de_documentacao.tex
@@ -2,32 +2,32 @@
 \label{plano_de_documentacao}
 
 \section{Enumeração dos documentos que será necessário produzir}
-Para a construção do ePadaria como em qualquer um sistema é necessário a escrita de vários tipos de documentos para o sistema no final ficar bem estruturado e de acordo com as expectativas.\\
-Os documentos que será necessário produzir serão no
-meadamente o documento de especificação de requisitos,o plano de qualidade,o plano de testes,o plano de formação,o plano de gestão de dados,o plano de gestão de recursos,o plano de segurança e o plano de gestão de risco
+Para a construção da ePadaria como em qualquer sistema, é necessário a escrita de vários tipos de documentos para que no final fique bem estruturado e de acordo com as expectativas.\\
+Os documentos que será necessário produzir serão nomeadamente o documento de especificação de requisitos, o plano de qualidade, o plano de testes, o plano de formação, o plano de gestão de dados, o plano de segurança e o plano de manutenção.
 \section{Identificação do responsável pela sua redação e aprovação}
 No desenvolvimento dos documentos necessários os responsáveis pela respetiva redação são os alunos Ricardo Monteiro, Rita Azevedo e Vasco Rodrigues. Os documentos e respetivos planos, são estruturados e planeados com o máximo cuidado, sendo usado técnicas e práticas comuns na construção dos documentos, para permitir o fácil entendimento na consulta e leitura.\\
-A pessoa responsável pela aprovação dos documentos usados para construir e implementar os diversos planos com objetivo de tornar o ePadaria o mais eficiente possível não é definida ,visto que não existe apenas um cliente para o ePadaria,seria provavelmente assim analisado e ver se atende ás necessidades das padarias, assim que esteja tudo de acordo com a aprovação dos documentos será implementado o sistema ePadaria.
+O responsável pela \textbf{formatação e correção} é o aluno Ricardo Monteiro, que se encontra de momento a meio no seu processo de correção. A própria ferramenta de escrita em si tem alguns "bugs", falhas, que ocorrem durante a escrita do mesmo e impedem que haja uma correção ortográfica completa, mas o aluno fará o seu melhor.
+A pessoa responsável pela \textbf{aprovação} dos documentos usados para construir e implementar os diversos planos, com o objetivo de tornar a ePadaria o mais eficiente possível não é definida, visto que não existe apenas um cliente para a ePadaria, seria provavelmente assim analisado e ver se atende ás necessidades das padarias e os seus clientes, assim que esteja tudo de acordo com a aprovação dos documentos será implementado o sistema ePadaria.
 
 
 \section{Descrição de cada documento}
 \subsection{Documento de especificação de requisitos}
-No documento de especificação de requisitos do ePadaria é descrito o sistema antes de passar á implementação com auxílio de tabelas e diagramas específicos usados na prática do documento, e também contem os recursos necessários ao desenvolvimento do sistema. 
+No documento de especificação de requisitos da ePadaria, é descrito o sistema antes de passar á implementação com auxílio de tabelas e diagramas específicos usados na prática do documento, e também contem os recursos necessários ao desenvolvimento do sistema. 
+
 \subsection{Plano de qualidade}
-No plano de qualidade está inserido o plano usado no ePadaria ao longo do seu desenvolvimento de maneira a minimizar riscos e haver maior sucesso na conclusão do sistema. \\ O plano irá constar os responsáveis pela qualidade do ePadaria, incluindo as responsabilidades do gestor.
+No plano de qualidade está inserido o plano usado na ePadaria ao longo do seu desenvolvimento de maneira a minimizar riscos e haver maior sucesso na conclusão do sistema. \\ O plano irá constar os responsáveis pela qualidade do ePadaria, incluindo as responsabilidades do gestor.
 
 \subsection{Plano de gestão de dados}
 No plano de gestão de dados é descrito a forma como os dados foram recolhidos, armazenados e manipulados até ao "estado" final desses dados onde irão ser usados na base de dados. Irá ser apresentado a base de dados do ePadaria com as respetivas pessoas que têm permissões de acesso aos dados e a quais.
-\subsection{Plano de gestão de recursos}
-No plano de gestão de recursos é identificado os recursos afetados no desenvolvimento do ePadaria, indicando como os recursos serão utilizados, nomeadamente os recursos humanos, recursos tecnológicos e recursos de apoio e infraestrutura. Inclui também o orçamento do projeto com os valores de cada serviço preciso no desenvolvimento do ePadaria.
 
 \subsection{Plano de testes}
-No plano de testes é indicado os objetivos dos testes efetuados ao ePadaria, descrição dos níveis de integridade, que testes são realizados com a respetiva descrição, como são gerados os dados para os testes com a respetiva descrição e descrição dos testes de integração dos módulos.
+No plano de testes é indicado os objetivos dos testes efetuados ao ePadaria, descrição dos níveis de integridade, que testes são realizados com a respetiva descrição e como são gerados os dados para os testes com a respetiva descrição.
+
 \subsection{Plano de formação}
 No plano de formação é indicado os métodos de formação para usar o sistema ePadaria, indicando o tempo de duração da formação, número de participantes e a avaliação desses participantes. A nível mais interno é indicado os recursos para os métodos usados na formação como a base de dados alternativa usada.
+
 \subsection{Plano de segurança}
-O plano de segurança do ePadaria é documentado a segurança usada na implementação, os testes de segurança realizados para testar se está tudo de acordo com as espectativas. Está incluído a segurança no alojamento de base de dados de maneira a não permitir acessos não autorizados e manter a integridade dos dados. É realizado todos os backups necessários da base de dados como da aplicação para não ser perdido nenhuma informação e não causar problemas ás padarias parcerias com o ePadaria.
-\subsection{Plano de gestão de risco}
-No plano de risco é descrito os impactos de risco do ePadaria, analisá-los e identifica-los para poder ser possível evitar ou arranjar solução caso os impactos aconteçam. É descrito o plano de resposta a esses riscos o mais complementado possível.
+O plano de segurança do ePadaria é documentado a segurança usada na implementação, os testes de segurança realizados para testar se está tudo de acordo com as expectativas. Está incluído a segurança no alojamento de base de dados de maneira a não permitir acessos não autorizados e manter a integridade dos dados. É realizado todos os backups necessários da base de dados como da aplicação para não ser perdido nenhuma informação e não causar problemas ás padarias parcerias com o ePadaria.
+
 \subsection{Plano de manutenção}
 No plano de manutenção é indicado o modelo adotado para manutenção do ePadaria, após a entrega aos respetivos clientes recebem o apoio após a entrega do sistema e é-lhes indicado as horas e datas de manutenção do sistema. Em termos mais concretos é documentado as ações feitas durante a manutenção do ePadaria, como será feita a manutenção e os respetivos responsáveis.
