--- a/Eng-Software/plano_de_testes.tex
+++ b/Eng-Software/plano_de_testes.tex
@@ -1,7 +1,7 @@
 \chapter{Plano de testes}
 \label{plano_de_testes}
 O plano de testes é uma das atividades da testagem de software no processo de desenvolvimento do mesmo.\\
- A testagem tem como objetivo principal encontar falhas no sistema realizando testes sistemáticos, mas para o projeto em geral serve para aumentar o nível de qualidade,  encontrando as falhas no sistema e as corrigindo. Faz parte da verificação e validação e tal como em outras etapas do ciclo de desenvolvimento de software, têm que ser:\\ Planeados\\
+ A testagem tem como objetivo principal encontrar falhas no sistema realizando testes sistemáticos, mas para o projeto em geral serve para aumentar o nível de qualidade,  encontrando as falhas no sistema e as corrigindo. Faz parte da verificação e validação e tal como em outras etapas do ciclo de desenvolvimento de software, têm que ser:\\ Planeados\\
  Documentados\\
  Executados\\
  Repetidos\\
