--- a/Eng-Software/referencias.tex
+++ b/Eng-Software/referencias.tex
@@ -6,9 +6,14 @@
 
 \section{Plano de manutenção}
 -https://edisciplinas.usp.br/pluginfile.php/325655/mod_resource/content/1/Aula09_Manutencao.pdf\\
+
 \section{Plano de qualidade}
 Este capitulo foi construido com base na consulta e leitura dos seguintes sites:\\
 -Site Linkedin,escrito por Claudia F. R. \\
 https://pt.linkedin.com/pulse/importância-de-um-plano-qualidade-software-e-testes-farias-ctfl \\
 -Site Project Builder\\
-https://www.projectbuilder.com.br/blog/importancia-da-gestao-da-qualidade-em-projetos-2/
+https://www.projectbuilder.com.br/blog/importancia-da-gestao-da-qualidade-em-projetos-2/\\
+
+\section{Descrição técnica dos sistemas}
+\\
+https://docs.microsoft.com/pt-pt/power-platform/admin/web-application-requirements\\
