--- a/Eng-Software/standards_tecnicas_ferramentas.tex
+++ b/Eng-Software/standards_tecnicas_ferramentas.tex
@@ -3,21 +3,21 @@
 
 \section{Standards}
 \subsection{Organização do código}
-O código no que diz respeito á organização ao desenvolver o ePadaria irá ser organizado por parte do cliente e funcionário onde cada um irá ter acessos diferentes alem de aspetos em comum.
+O código que diz respeito á organização ao desenvolver na ePadaria, irá ser organizado por parte do cliente e funcionário onde cada um irá ter acessos diferentes além de aspetos em comum.
 \subsection{Especificação}
-O ePadaria é constituido pela parte do cliente e a parte do funcionário e ambos terão acesso ás páginas dos contactos e da informação sobre nós, sem haver necessidade de estar registado no ePadaria para ver essa informação.\\
-O cliente vai poder se registar e efetuar o login no nosso sistema onde irá inserir os dados necessários para poder fazer pedidos pelo nosso sistema ás padarias pretendidas. Poderá tambem aceder aos produtos disponiveis e ao aceder a cada produto poderá ver a respetiva padaria ou ver os pedidos em apenas uma especifica padaria. \\
-O funcionário vai ter uma parte no ePadaria que só ele poderá aceder onde irá conter o necessário para poder ver os pedidos efetuados pelos clientes, incluíndo os que já foram concluídos. Poderá ver as informações dos produtos pedidos pelo cliente, quem efectuou o pedido e a data e hora do pedido. Na parte dos produtos o funcionário pode eliminar ou acrescentar novos produtos para o cliente poder comprar ,terá de inserir a informação do produto referente ao nome e breve descrição.
+A ePadaria é constituída pela parte do cliente e a parte do funcionário e ambos terão acesso ás páginas dos contactos e da informação sobre nós, sem haver necessidade de estar registado no ePadaria para ver essa informação.\\
+O cliente vai poder se registar e efetuar o login no nosso sistema onde irá inserir os dados necessários para poder fazer pedidos pelo nosso sistema ás padarias pretendidas. Poderá também aceder aos produtos disponíveis e a cada produto, como também ver a respetiva padaria ou ver os pedidos em apenas uma especifica padaria. \\
+O funcionário vai ter uma parte na ePadaria que só ele poderá aceder onde irá conter o necessário para poder ver os pedidos efetuados pelos clientes, incluindo os que já foram concluídos. Poderá ver as informações dos produtos pedidos pelo cliente, quem efetuou o pedido e a data e hora do mesmo. Na parte dos produtos, o funcionário pode eliminar ou acrescentar novos para o cliente poder comprar, terá de inserir a informação do produto referente ao nome e breve descrição.
 
 \subsection{Documentação}
 Para implementar o ePadaria, tal como outros sistemas semelhantes, foi feito diversos tipos de documentos necessários,começando com o documento de requisitos. O documento de requisitos é a base do sistema que segue a seguir de aprovação.\\
-Existem vários documentos usados á parte para o ePadaria que são dados como Plano. O plano de qualidade ajuda a manter a qualidade do sistema acompanhando desde o inicio ao fim do projeto, o plano de gestão de dados que fala sobre a base de dados e como os dados são geridos, o plano de gestão de recursos onde é mencionado recursos e como são afetados com o ePadaria,o plano de testes fala dos diversos tipos de testes realizados ao sistema,o plano de formação.
+Existem vários documentos usados á parte para o ePadaria que são dados como Plano. O plano de qualidade ajuda a manter a qualidade do sistema acompanhando desde o inicio ao fim do projeto, o plano de gestão de dados que fala sobre a base de dados e como os dados são geridos, o plano de gestão de recursos onde é mencionado recursos e como são afetados com o ePadaria,o plano de testes fala dos diversos tipos de testes realizados ao sistema,o plano de formação, o de segurança e manutenção.
 
 
 \section{Técnicas}
 Ao longo do desenvolvimento da documentação e desenvolvimento do sistema ePadaria é aplicado técnicas dadas e aprendidas nas respetivas cadeiras de Analise e Desenho De Sistemas, Engenharia de Software e Programação para web.\\
-Na cadeira de Analise e desenho de sistemas aprendemos técnicas e práticas para construir o documento de requisito, para além de onde surgiu a ideia do sistema ePadaria, que tem o intuito de ajudar as pequenas padarias sem sistema informático. É usado técnicas como construção de diagramas aos quais:\\ 
--diagramas de casos de uso;\\ 
+Na cadeira de Análise e Desenho de sistemas, aprendemos técnicas e práticas para construir o documento de requisitos, para além de onde surgiu a ideia do sistema ePadaria, que tem o intuito de ajudar as pequenas padarias sem sistema informático. É usado técnicas como construção de diagramas aos quais:\\ 
+\\-diagramas de casos de uso;\\ 
 -diagramas de classe;\\
 -diagramas de objetos;\\
 -diagramas de atividade\\
@@ -26,16 +26,17 @@ Na cadeira de Analise e desenho de sistemas aprendemos técnicas e práticas par
 -diagramas de colaboração;\\
 -diagramas de componentes;\\
 -diagramas de distribuição;\\
-Alguns dos respetivos diagramas para além de usados na construção do documento de requisitos podemos visualizá-los ao longo deste documento. O documento de requisitos seguiu um modelo estruturado idealizado para o próprio documento, ao consultar outros documentos de requisitos podemos ver seguem o mesmo modelo ou um semelhante respeitando as normas da prática.\\
-Em Programação para web as técnicas e práticas foram aplicadas no desenvolvimento do sistema, aprendemos o necessário para desenvolver o sistema com as práticas usadas em Web Apps. É usado a prática de javascript e java como base para construir o essencial do ePadaria, na cadeira é dado e aprendido o necessário para o implementar.\\
-Em Engenharia de Software é aprendido técnicas para preparação de documentos seguindo um esboço de plano fornecido pelo professor e implementado no programa TextStudio. Apesar de novas técnicas aprendidas e workshops desenvolvidos entre eles workshop de diagrama de distribuição, mockups, organização do código e plano de testes, nesta cadeira implementamos técnicas aprendidas na de Analise e Desenho de Sistemas como criação de diagramas usados neste mesmo documento.\\ 
+\\Alguns dos respetivos diagramas para além de usados na construção do documento de requisitos podemos visualizá-los ao longo deste documento. O documento de requisitos seguiu um modelo estruturado idealizado para o próprio documento, ao consultar outros documentos de requisitos podemos ver seguem o mesmo modelo ou um semelhante respeitando as normas da prática.\\
+Em Programação para web, as técnicas e práticas foram aplicadas no desenvolvimento do sistema, aprendemos o necessário para desenvolver o sistema com as práticas usadas em "WebApps". É usado a prática de javascript e java como base para construir o essencial da ePadaria, na cadeira é dado e aprendido o necessário para o implementar.\\
+Em Engenharia de Software, é aprendido técnicas para preparação de documentos seguindo um esboço de plano fornecido pelo docente e implementado no programa TextStudio. Apesar de novas técnicas aprendidas e workshops desenvolvidos, entre eles workshop de diagrama de distribuição, mockups, organização do código e plano de testes, nesta cadeira implementamos técnicas aprendidas na de Analise e Desenho de Sistemas como criação de diagramas usados neste mesmo documento.\\ 
 
 
 \section{Ferramentas}
-Sendo que o ePadaria, que como sabemos irá nos permitir ajuda as pequenas padarias, ao qual o nosso sistema irá ser constituído pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados, a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar pedidos, adicionar pedidos, permite aceder à base de dados e uma base de dados para serem armazenados os dados e as receitas dos produtos da Padaria os que os mesmo achassem que não fosse confidencial, mas não seriam partilhadas com os clientes.\\
-As ferramentas usadas para construir o ePadaria são programas que nos permitem criar bases de dados, a nossa interface como as suas funções. \\
-O programa MySQL é um serviço de armazenamento de dados gerido para inserir aplicativos nativos na nuvem. O MySQL é o programa usado para guardar a base de dados do ePadaria, usando linguagem SQL. A base de dados constitui as diferentes tabelas para armazenar os dados dos clientes, produtos, padarias e dos funcionários.\\
-Para construir o sistema ePadaria é usado o programa Eclipse IDE, o programa permite criar diversos tipos de projetos e ficheiros ao qual podendo usar vários tipos de linguagens de programação, de marcação e de consulta estruturada. No ePadaria é criado um projeto Dynamic Web Project com ficheiros JSP. As diversas linguagens usadas são:\\
+Sendo que a ePadaria irá nos permitir ajudar as pequenas padarias, ao qual o nosso sistema irá ser constituído pela parte do cliente que se trata da ponte de comunicação entre o lado Cliente e a Base de Dados, a parte da Padaria permite ver a informação dos pedidos, confirmar/rejeitar/adicionar os mesmos, permite aceder à base de dados e uma base de dados para serem armazenados os dados e as receitas dos produtos da Padaria, os que os mesmos achassem que não fosse confidencial, mas não seriam partilhadas com os clientes.\\
+As \textbf{ferramentas} usadas para construir a ePadaria são \textbf{programas} que nos permitem criar bases de dados, a nossa interface como as suas funções. \\
+O programa \textbf{MySQL} é um serviço de armazenamento de dados gerido para inserir aplicativos nativos na nuvem. O MySQL é o programa usado para guardar a base de dados do ePadaria, usando linguagem SQL. A base de dados constitui as diferentes tabelas para armazenar os dados dos clientes, produtos, padarias e dos funcionários.\\
+Para construir o sistema ePadaria, é usado o programa \textbf{Eclipse IDE}, o programa permite criar diversos tipos de projetos e ficheiros ao qual podendo usar vários tipos de linguagens de programação, de marcação e de consulta estruturada. No ePadaria é criado um projeto Dynamic Web Project com \textbf{ficheiros JSP}. As diversas linguagens usadas são:\\
+\\
 - \textbf{HTML}  (Linguagem de Marcação);\\
 - \textbf{SQL}  (Linguagem de consulta estruturada);\\
 - \textbf{CSS}  (mecanismo para adicionar estilo a um documento web);\\
