--- a/Eng-Software/plano_de_manutenção.tex
+++ b/Eng-Software/plano_de_manutenção.tex
@@ -9,9 +9,9 @@ O nosso plano de manutenção é baseado num modelo estruturado que visa a passa
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=15cm]{Manutenção}
+	\includegraphics[width=15cm]{Pedidos_Manutençao}
 	\caption{Manutenção estruturada e não estruturada}
-	\label{fig:Manutenção}
+	\label{fig:Pedidos_Manutencao}
 \end{figure}
 
 \subsection{As categorias de manutenção}
@@ -31,9 +31,9 @@ Depois é feita a descrição e definição de eventos sequenciais.\\
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=15cm]{Manutenção2}
+	\includegraphics[width=15cm]{Pedidos_Manutencao2}
 	\caption{Sequência de eventos}
-	\label{fig:Manutenção2}
+	\label{fig:Pedidos_Manutençao2}
 \end{figure}
 \\
 Em continuação, estabelecemos procedimentos para registrar o histórico de atividades feitas na manutenção e depois definimos critérios de avaliação e revisão.
