--- a/Eng-Software/plano_de_qualidade.tex
+++ b/Eng-Software/plano_de_qualidade.tex
@@ -2,20 +2,23 @@
 \label{plano_de_qualidade}
 
 \subsection{Importância da qualidade em projetos de Software}
-É importante a qualidade em projetos de Software de maneira a minimizar riscos, quando o sistema é atualizado pode surgir erros nas funcionalidades do software ou a criar algo semelhante a uma função já existente. Além de evitar riscos como erros a qualidade em projetos de Software é importante para:\\
+É importante a \textbf{qualidade} em projetos de Software de maneira a minimizar riscos, quando o sistema é atualizado pode surgir erros nas funcionalidades do software ou a criar algo semelhante a uma função já existente. Além de evitar riscos como erros, a qualidade em projetos de Software é importante para:\\
+\\
 -haver uma boa compreensão do projeto\\
 -Economizar recursos usados que irão constar no orçamento,\\
 -Progresso na eficiência da equipa,\\
 -Cumprir prazos,\\
 -Melhor resultado no produto final,\\
 -Satisfação do cliente.\\
-A qualidade do projeto vem desde o início,os requisitos, é necessário defini-los e percebe-los juntamente com o cliente que pretendeu. Para ser possível manter essa qualidade é necessário haver um planeamento de controlo de qualidade de maneira a atender as normas do mercado e os requisitos. Os processos de gestão,controlo e planeamento deverão ser flexíveis de maneira a ser adaptado a cada software.\\
-Ao implementar o plano de qualidade deverá estabelecer um padrão baseado nos requisitos e descrever como vai ser avaliado, para não deixar margem de haver suposições aos atributos por parte do engenheiro que devem ser otimizados.
+\\
+A qualidade do projeto vem desde o início, os requisitos, é necessário defini-los e percebe-los juntamente com o cliente que pretendeu. Para ser possível manter essa qualidade, é necessário haver um planeamento de controlo de qualidade de maneira a atender as normas do mercado e os requisitos. Os processos de gestão, controlo e planeamento deverão ser flexíveis de maneira a ser adaptado a cada software.\\
+Ao implementar o plano de qualidade, deverá ser estabelecido um padrão baseado nos requisitos e descrever como vai ser avaliado, para não deixar margem de suposições aos atributos por parte do engenheiro que devem ser otimizados.
 \subsection{Responsabilidades do gestor da qualidade}
-O gestor de qualidade tem um dos papeis mais importantes e é um dos responsáveis por manter a qualidade no desenvolvimento de um projeto de maneira a evitar erros e a seguir as normas. Ele é responsável por definir métodos de qualidade ,aprovar e analisar documentos de aprovação do software no seu estado final, atuar como suporte técnico da equipa de engenharia da empresa, realizar auditoria,coordenar reclamações vindas dos clientes sobre o produto que lhes diz respeito,implementar e administrar os requisitos das normas de gestão de qualidade.\\
-Apesar das responsabilidades do gestor ,para alguém poder assumir é exigido pelo mercado experiências como já ter trabalhado com controle de qualidade, ser formado na área de engenharia e ter experiência na gestão de projetos, apesar de para ser um profissional na área é exigido mais competências.
+O gestor de qualidade tem um dos papeis mais importantes e é um dos responsáveis por manter a qualidade no desenvolvimento de um projeto de maneira a evitar erros e a seguir as normas. Ele é responsável por definir métodos de qualidade, aprovar e analisar documentos de aprovação do software no seu estado final, atuar como suporte técnico da equipa de engenharia da empresa, realizar auditoria, coordenar reclamações vindas dos clientes sobre o produto que lhes diz respeito, implementar e administrar os requisitos das normas de gestão de qualidade.\\
+Apesar das responsabilidades do gestor, para alguém poder assumir, é exigido pelo mercado experiências como já ter trabalhado com controle de qualidade, ser formado na área de engenharia e ter experiência na gestão de projetos, apesar de para ser um profissional na área é exigido mais competências.
 \subsection{Métricas}
 Com o plano de qualidade pretende-se para o nosso sistema:\\
+\\
 -Manter a qualidade do documento de requisitos;\\
 -Estruturar a base de dados com qualidade e organização;\\
 -Construir os Mock Up da ePadaria tendo em conta o necessário para ser intuitivo;\\
