Conclusão, Segurança, Testes.

--- a/Eng-Software/plano_de_segurança.tex
+++ b/Eng-Software/plano_de_segurança.tex
@@ -24,8 +24,8 @@ Tem como objetivo fazer e manter os registos apropriados, como quem realizou ace
 
 
 \subsection{Testes de segurança}
-Como referido no planeamento de testes, vão haver vários testes a ser realizados ao sistema para conseguir chegar ao nível desejado e requerido de segurança. Com estes mesmos vamos conseguir encontrar as falhas no nosso sistema e as corrigir, mas para isso vão ter que ser pensados, planeados, executados e repetidos.\\
+Como referido no planeamento de testes, vão haver vários testes a ser realizados ao sistema para conseguir chegar ao nível desejado e requerido de segurança. Com estes mesmos vamos conseguir encontrar as falhas no nosso sistema e as corrigir, mas para isso vão ter que ser pensados, planeados, executados e repetidos. Como referido no capítulo 11, Plano de Testes.\\
 
 \subsection{Realização de backups à base de dados e à aplicação}
 Voltando aos princípios fundamentais, chegamos á conclusão que para manter esses mesmos, como por exemplo a disponibilidade dos dados, têm se que olhar para os cenários que ocorrem no mundo real. Devido á natureza do negócio vão ser armazenados um quantidade grande de dados a certo ponto e como responsáveis temos que preparar o sistema para falhas, quer seja um ataque cibernético ou uma simples falha. Qualquer um deles pode causar muito dano á empresa e aos seus clientes.\\
-Para diminuir o dano causado ao sistema devem se realizar backups á base de dados, de forma continúa e organizada. Semana a semana, é o recomendado pela nossa equipa, mas poderá vir a diminuir no seu intervalo dependendo da quantidade de clientes que o sistema têm, mas o objetivo é conseguir manter uma cópia legítima dos dados de maneira a que se houver uma falha há uma recuperação mais rápida e mantém registos de informação legítima caso haja alteração não autorizada por terceiros.
+Para diminuir o dano causado ao sistema devem se realizar backups á base de dados, de forma continua e organizada. Semana a semana, é o recomendado pela nossa equipa, mas poderá vir a diminuir no seu intervalo dependendo da quantidade de clientes que o sistema têm, mas o objetivo é conseguir manter uma cópia legítima dos dados de maneira a que se houver uma falha há uma recuperação mais rápida e mantém registos de informação legítima caso haja alteração não autorizada por terceiros.
