--- a/Eng-Software/plano_de_testes.tex
+++ b/Eng-Software/plano_de_testes.tex
@@ -1,8 +1,15 @@
 \chapter{Plano de testes}
 \label{plano_de_testes}
-O plano de testes é uma das atividades da testagem de software no processo de desenvolvimento do mesmo.\\
- A testagem tem como objetivo principal encontrar falhas no sistema realizando testes sistemáticos, mas para o projeto em geral serve para aumentar o nível de qualidade,  encontrando as falhas no sistema e as corrigindo. Faz parte da verificação e validação e tal como em outras etapas do ciclo de desenvolvimento de software, têm que ser:\\ Planeados\\
- Documentados\\
- Executados\\
- Repetidos\\
-Como já discutido, somos compostos apenas por uma equipa que está a acompanhar o desenvolvimento do software em todas etapas, logo naturalmente, também somos a equipa de testagem e vamos fazer todas etapas necessárias ditadas em cima para 
+ A testagem tem como objetivo principal encontrar falhas no sistema realizando testes sistemáticos, mas para o projeto em geral serve para aumentar o nível de qualidade,  encontrando as falhas no sistema e as corrigindo. Faz parte da verificação e validação tal como em outras etapas do ciclo de desenvolvimento de software. 
+ \section{Planeamento}
+ Planear os testes necessários para criar uma aplicação segura e com um nível de usabilidade associado ao nosso publico alvo.\\
+ Irão ser planeados rotas de testagem da aplicação para avaliar o nível de usabilidade, ataques ao software para garantir a segurança dos dados, entre outros.
+ \section{Documentados}
+ Estes testes serão documentados e avaliados, permitindo à equipa de desenvolvimento tomar escolhas e reavaliar a situação.\\
+ A Documentação irá usar modelos universais, para permitir a leitura destes pelo a equipa e por futuros membros da equipa.
+ \section{Executados}
+ Depois de termos uma base solida de testes planeados e a documentação pronta, iremos executar os testes para garantir o sucesso da aplicação.
+ \section{Repetidos}
+ Estes testes poderão ser repetidos para garantir uma "sample pool" de testes, por exemplo com os relacionados com a usabilidade da aplicação, para avaliar se há outras falhas do design ou erros de programação a nível de aplicação\\
+ \section{Conclusão}
+Como já discutido, somos compostos apenas por uma equipa que está a acompanhar o desenvolvimento do software em todas etapas, logo naturalmente, também somos a equipa de testagem e vamos fazer todas etapas necessárias ditadas em cima para garantir uma aplicação segura e concretizada.
